--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.8.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
