--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.18.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.8.0",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
